// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Edit Course Steps Unit Tests: Create Step 0 1`] = `
<Adapter
  style={
    Object {
      "padding": "0px 24px",
    }
  }
>
  <div
    style={
      Object {
        "background": "#fff",
        "padding": "24px",
      }
    }
  >
    <Steps
      current={0}
      iconPrefix="ant"
      prefixCls="ant-steps"
      status="wait"
    >
      <Step
        key="Configure"
        title="Configure"
      />
      <Step
        key="Review"
        title="Review"
      />
      <Step
        key="Finished"
        title="Finished"
      />
    </Steps>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px dashed #e9e9e9",
          "borderRadius": "6px",
          "marginTop": "24px",
          "minHeight": "200px",
          "paddingTop": "72px",
          "textAlign": "center",
        }
      }
    >
      <Form(CreateEditCourseForm)
        name={
          Object {
            "value": null,
          }
        }
        onChange={[Function]}
        onSubmit={[Function]}
        releaseDate={
          Object {
            "value": null,
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "marginTop": "24px",
        }
      }
    />
  </div>
</Adapter>
`;

exports[`Create Edit Course Steps Unit Tests: Create Step 1 1`] = `
<Adapter
  style={
    Object {
      "padding": "0px 24px",
    }
  }
>
  <div
    style={
      Object {
        "background": "#fff",
        "padding": "24px",
      }
    }
  >
    <Steps
      current={0}
      iconPrefix="ant"
      prefixCls="ant-steps"
      status="wait"
    >
      <Step
        key="Configure"
        title="Configure"
      />
      <Step
        key="Review"
        title="Review"
      />
      <Step
        key="Finished"
        title="Finished"
      />
    </Steps>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px dashed #e9e9e9",
          "borderRadius": "6px",
          "marginTop": "24px",
          "minHeight": "200px",
          "paddingTop": "72px",
          "textAlign": "center",
        }
      }
    >
      <Form(CreateEditCourseForm)
        name={
          Object {
            "value": "test",
          }
        }
        onChange={[Function]}
        onSubmit={[Function]}
        releaseDate={
          Object {
            "value": "1970-01-01T16:00:00.000Z",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "marginTop": "24px",
        }
      }
    />
  </div>
</Adapter>
`;

exports[`Create Edit Course Steps Unit Tests: Create Step 2: Loading 1`] = `
<Adapter
  style={
    Object {
      "padding": "0px 24px",
    }
  }
>
  <div
    style={
      Object {
        "background": "#fff",
        "padding": "24px",
      }
    }
  >
    <Steps
      current={1}
      iconPrefix="ant"
      prefixCls="ant-steps"
      status="wait"
    >
      <Step
        key="Configure"
        title="Configure"
      />
      <Step
        key="Review"
        title="Review"
      />
      <Step
        key="Finished"
        title="Finished"
      />
    </Steps>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px dashed #e9e9e9",
          "borderRadius": "6px",
          "marginTop": "24px",
          "minHeight": "200px",
          "paddingTop": "72px",
          "textAlign": "center",
        }
      }
    >
      <div>
        <p>
          Name: 
          test
        </p>
        <p>
          Start releaseDate:
           
          1970-01-01
        </p>
      </div>
    </div>
    <div
      style={
        Object {
          "marginTop": "24px",
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "center",
          }
        }
      >
        <Button
          block={false}
          ghost={false}
          loading={true}
          onClick={[Function]}
          prefixCls="ant-btn"
          type="primary"
        >
          Submit
        </Button>
        <Button
          block={false}
          ghost={false}
          loading={false}
          onClick={[Function]}
          prefixCls="ant-btn"
          style={
            Object {
              "marginLeft": 8,
            }
          }
        >
          Previous
        </Button>
      </div>
    </div>
  </div>
</Adapter>
`;

exports[`Create Edit Course Steps Unit Tests: Create Step 2: No Loading 1`] = `
<Adapter
  style={
    Object {
      "padding": "0px 24px",
    }
  }
>
  <div
    style={
      Object {
        "background": "#fff",
        "padding": "24px",
      }
    }
  >
    <Steps
      current={1}
      iconPrefix="ant"
      prefixCls="ant-steps"
      status="wait"
    >
      <Step
        key="Configure"
        title="Configure"
      />
      <Step
        key="Review"
        title="Review"
      />
      <Step
        key="Finished"
        title="Finished"
      />
    </Steps>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px dashed #e9e9e9",
          "borderRadius": "6px",
          "marginTop": "24px",
          "minHeight": "200px",
          "paddingTop": "72px",
          "textAlign": "center",
        }
      }
    >
      <div>
        <p>
          Name: 
          test
        </p>
        <p>
          Start releaseDate:
           
          1970-01-01
        </p>
      </div>
    </div>
    <div
      style={
        Object {
          "marginTop": "24px",
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "center",
          }
        }
      >
        <Button
          block={false}
          ghost={false}
          loading={false}
          onClick={[Function]}
          prefixCls="ant-btn"
          type="primary"
        >
          Submit
        </Button>
        <Button
          block={false}
          ghost={false}
          loading={false}
          onClick={[Function]}
          prefixCls="ant-btn"
          style={
            Object {
              "marginLeft": 8,
            }
          }
        >
          Previous
        </Button>
      </div>
    </div>
  </div>
</Adapter>
`;

exports[`Create Edit Course Steps Unit Tests: Create Step 3: Error 1`] = `
<Adapter
  style={
    Object {
      "padding": "0px 24px",
    }
  }
>
  <div
    style={
      Object {
        "background": "#fff",
        "padding": "24px",
      }
    }
  >
    <Steps
      current={2}
      iconPrefix="ant"
      prefixCls="ant-steps"
      status="error"
    >
      <Step
        key="Configure"
        title="Configure"
      />
      <Step
        key="Review"
        title="Review"
      />
      <Step
        key="Finished"
        title="Finished"
      />
    </Steps>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px dashed #e9e9e9",
          "borderRadius": "6px",
          "marginTop": "24px",
          "minHeight": "200px",
          "paddingTop": "72px",
          "textAlign": "center",
        }
      }
    >
      <div>
        <div>
          Cannot Process the Request
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "marginTop": "24px",
        }
      }
    >
      <div
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <Button
          block={false}
          ghost={false}
          loading={false}
          prefixCls="ant-btn"
          type="primary"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/"
          >
            Back to Course Library
          </Link>
        </Button>
      </div>
    </div>
  </div>
</Adapter>
`;

exports[`Create Edit Course Steps Unit Tests: Create Step 3: No Error 1`] = `
<Adapter
  style={
    Object {
      "padding": "0px 24px",
    }
  }
>
  <div
    style={
      Object {
        "background": "#fff",
        "padding": "24px",
      }
    }
  >
    <Steps
      current={2}
      iconPrefix="ant"
      prefixCls="ant-steps"
      status="finish"
    >
      <Step
        key="Configure"
        title="Configure"
      />
      <Step
        key="Review"
        title="Review"
      />
      <Step
        key="Finished"
        title="Finished"
      />
    </Steps>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px dashed #e9e9e9",
          "borderRadius": "6px",
          "marginTop": "24px",
          "minHeight": "200px",
          "paddingTop": "72px",
          "textAlign": "center",
        }
      }
    >
      <div>
        <div>
          Request Complete
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "marginTop": "24px",
        }
      }
    >
      <div
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <Button
          block={false}
          ghost={false}
          loading={false}
          prefixCls="ant-btn"
          type="primary"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/"
          >
            Back to Course Library
          </Link>
        </Button>
      </div>
    </div>
  </div>
</Adapter>
`;

exports[`Create Edit Course Steps Unit Tests: Edit Check States 1`] = `
<Adapter
  style={
    Object {
      "padding": "0px 24px",
    }
  }
>
  <div
    style={
      Object {
        "background": "#fff",
        "padding": "24px",
      }
    }
  >
    <Steps
      current={0}
      iconPrefix="ant"
      prefixCls="ant-steps"
      status="wait"
    >
      <Step
        key="Configure"
        title="Configure"
      />
      <Step
        key="Review"
        title="Review"
      />
      <Step
        key="Finished"
        title="Finished"
      />
    </Steps>
    <div
      style={
        Object {
          "backgroundColor": "#fafafa",
          "border": "1px dashed #e9e9e9",
          "borderRadius": "6px",
          "marginTop": "24px",
          "minHeight": "200px",
          "paddingTop": "72px",
          "textAlign": "center",
        }
      }
    >
      <Form(CreateEditCourseForm)
        name={
          Object {
            "value": "name",
          }
        }
        onChange={[Function]}
        onSubmit={[Function]}
        releaseDate={
          Object {
            "value": "1970-01-01T16:00:00.000Z",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "marginTop": "24px",
        }
      }
    />
  </div>
</Adapter>
`;
